--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Les Petits Plats</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 	<script src="https://kit.fontawesome.com/253fa00d75.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="./style.css">
@@ -20,25 +20,25 @@
 			</form>
 		</section>
 		<section id="containerKeywords" class="flex">
-			<div class="keyword">café</div>
-			<div class="keyword">sucre</div>
-			<div class="keyword">lait</div>
-			<div class="keyword">shaker</div>
-			<div class="keyword">casserole</div>
-			<div class="keyword">fourchette</div>
-			<div class="keyword">couteau</div>
-			<div class="keyword">café</div>
-			<div class="keyword">sucre</div>
-			<div class="keyword">lait</div>
-			<div class="keyword">shaker</div>
-			<div class="keyword">casserole</div>
-			<div class="keyword">fourchette</div>
-			<div class="keyword">couteau</div>
+			<div class="keyword flex"><p>café</p><i class="far fa-times-circle"></i></div>
+			<div class="keyword flex"><p>sucre</p><i class="far fa-times-circle"></i></div>
+			<div class="keyword flex"><p>lait</p><i class="far fa-times-circle"></i></div>
+			<div class="keyword flex"><p>shaker</p><i class="far fa-times-circle"></i></div>
+			<div class="keyword flex"><p>casserole</p><i class="far fa-times-circle"></i></div>
+			<div class="keyword flex"><p>fourchette</p><i class="far fa-times-circle"></i></div>
+			<div class="keyword flex"><p>couteau</p><i class="far fa-times-circle"></i></div>
+			<div class="keyword flex"><p>café</p><i class="far fa-times-circle"></i></div>
+			<div class="keyword flex"><p>sucre</p><i class="far fa-times-circle"></i></div>
+			<div class="keyword flex"><p>lait</p><i class="far fa-times-circle"></i></div>
+			<div class="keyword flex"><p>shaker</p><i class="far fa-times-circle"></i></div>
+			<div class="keyword flex"><p>casserole</p><i class="far fa-times-circle"></i></div>
+			<div class="keyword flex"><p>fourchette</p><i class="far fa-times-circle"></i></div>
+			<div class="keyword flex"><p>couteau</p><i class="far fa-times-circle"></i></div>
 		</section>
 		<section class="dropdowns flex">
 			<div class="dropdown">
 				<button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	   				Dropdown button
+	   				Ingrédients
 				</button>
 				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 				    <a class="dropdown-item" href="#">Action</a>
@@ -47,9 +47,9 @@
 				</div>
 			</div>
 			<!-- Example single danger button -->
-			<div class="btn-group">
+			<div class="dropdown">
 				<button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	    			Action
+	    			Appareil
 				</button>
 				<div class="dropdown-menu">
 				    <a class="dropdown-item" href="#">Action</a>
@@ -61,7 +61,7 @@
 			</div>
 			<div class="dropdown">
 				<button class="btn btn-danger dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	   				Dropdown button
+	   				Ustensils
 				</button>
 				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 				    <a class="dropdown-item" href="#">Action</a>
@@ -70,38 +70,7 @@
 				</div>
 			</div>
 		</section>
-		<section id="containerCards" class="flex">
-			<article class="card">
-				<div class="up"></div>
-				<div class="down">
-					<div class="titlePlusTime flex">
-						<div>Titre du Menu</div>
-						<div>O 40mn</div>
-					</div>
-					<div>
-						<div class="contentMenu flex">
-							<ul>
-								<li>lalalalala</li>
-								<li>lalalalalala</li>
-								<li>lalalalalala</li>
-								<li>lalalalalala</li>
-								<li>lalalalalala</li>
-							</ul>
-							<div class="recipe">Lorem ipsum dolor sit amet, consectetur adipisicing, elit. Distinctio rem reiciendis beatae doloribus</div>
-						</div>
-					</div>
-				</div>
-			</article>
-			<div class="card"></div>
-			<div class="card"></div>
-			<div class="card"></div>
-			<div class="card"></div>
-			<div class="card"></div>
-			<div class="card"></div>
-			<div class="card"></div>
-			<div class="card"></div>
-			<div class="card"></div>
-		</section>
+		<section id="containerCards" class="flex"></section>
 	</main>
 	<footer>
 		
@@ -109,6 +78,7 @@
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+	<script src="./json/recipes.js"></script>
 	<script src="./js/Input.js"></script>
 	<script src="./js/Card.js"></script>
 	<script src="./js/ManagerContainerCards.js"></script>
