--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 	<header class="flex">
-		<img src="./images/logo.png" alt="logo_les_petits_plats">
+		<a href=""><img src="./images/logo.png" alt="logo_les_petits_plats"></a>
 	</header>
 	<main>
 		<section>
@@ -19,54 +19,30 @@
 				<div type="submit" id="magnifyingGlass"><i class="fas fa-search"></i></div>
 			</form>
 		</section>
-		<section id="containerKeywords" class="flex">
-			<div class="keyword flex"><p>café</p><i class="far fa-times-circle"></i></div>
-			<div class="keyword flex"><p>sucre</p><i class="far fa-times-circle"></i></div>
-			<div class="keyword flex"><p>lait</p><i class="far fa-times-circle"></i></div>
-			<div class="keyword flex"><p>shaker</p><i class="far fa-times-circle"></i></div>
-			<div class="keyword flex"><p>casserole</p><i class="far fa-times-circle"></i></div>
-			<div class="keyword flex"><p>fourchette</p><i class="far fa-times-circle"></i></div>
-			<div class="keyword flex"><p>couteau</p><i class="far fa-times-circle"></i></div>
-			<div class="keyword flex"><p>café</p><i class="far fa-times-circle"></i></div>
-			<div class="keyword flex"><p>sucre</p><i class="far fa-times-circle"></i></div>
-			<div class="keyword flex"><p>lait</p><i class="far fa-times-circle"></i></div>
-			<div class="keyword flex"><p>shaker</p><i class="far fa-times-circle"></i></div>
-			<div class="keyword flex"><p>casserole</p><i class="far fa-times-circle"></i></div>
-			<div class="keyword flex"><p>fourchette</p><i class="far fa-times-circle"></i></div>
-			<div class="keyword flex"><p>couteau</p><i class="far fa-times-circle"></i></div>
-		</section>
+		<section id="containerKeywords" class="flex"></section>
 		<section class="dropdowns flex">
 			<div class="dropdown">
 				<button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	   				Ingrédients
 				</button>
 				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-				    <a class="dropdown-item" href="#">Action</a>
-				    <a class="dropdown-item" href="#">Another action</a>
-				    <a class="dropdown-item" href="#">Something else here</a>
+				    <div id="containerIngredients" class="bg-primary flex"></div>
 				</div>
 			</div>
-			<!-- Example single danger button -->
 			<div class="dropdown">
 				<button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	    			Appareil
 				</button>
-				<div class="dropdown-menu">
-				    <a class="dropdown-item" href="#">Action</a>
-				    <a class="dropdown-item" href="#">Another action</a>
-				    <a class="dropdown-item" href="#">Something else here</a>
-				    <div class="dropdown-divider"></div>
-				    <a class="dropdown-item" href="#">Separated link</a>
+				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+				    <div id="containerAppliances" class="bg-danger flex"></div>
 				</div>
 			</div>
 			<div class="dropdown">
-				<button class="btn btn-danger dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	   				Ustensils
 				</button>
 				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-				    <a class="dropdown-item" href="#">Action</a>
-				    <a class="dropdown-item" href="#">Another action</a>
-				    <a class="dropdown-item" href="#">Something else here</a>
+				    <div id="containerUstensils" class="bg-success flex"></div>
 				</div>
 			</div>
 		</section>
@@ -79,8 +55,11 @@
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 	<script src="./json/recipes.js"></script>
+	<script src="./js/Ingredients.js"></script>
+	<script src="./js/Appliances.js"></script>
+	<script src="./js/Ustensils.js"></script>
+	<script src="./js/Main.js"></script>
 	<script src="./js/Input.js"></script>
 	<script src="./js/Card.js"></script>
-	<script src="./js/ManagerContainerCards.js"></script>
 </body>
 </html>
