Création de la class Card

--- a/index.html
+++ b/index.html
@@ -26,14 +26,16 @@
 	   				Ingrédients
 				</button>
 				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+					<input type="input" name="" id="searchInMenuIngredients">
 				    <div id="containerIngredients" class="bg-primary flex"></div>
 				</div>
 			</div>
 			<div class="dropdown">
-				<button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<button class="btn btn-danger dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	    			Appareil
 				</button>
 				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+					<input type="input" name="" id="searchInMenuAppliances">
 				    <div id="containerAppliances" class="bg-danger flex"></div>
 				</div>
 			</div>
@@ -42,6 +44,7 @@
 	   				Ustensils
 				</button>
 				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+					<input type="input" name="" id="searchInMenuUstensils">
 				    <div id="containerUstensils" class="bg-success flex"></div>
 				</div>
 			</div>
@@ -58,8 +61,8 @@
 	<script src="./js/Ingredients.js"></script>
 	<script src="./js/Appliances.js"></script>
 	<script src="./js/Ustensils.js"></script>
+	<script src="./js/Card.js"></script>
 	<script src="./js/Main.js"></script>
 	<script src="./js/Input.js"></script>
-	<script src="./js/Card.js"></script>
 </body>
 </html>
