--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 	   				Ingrédients
 				</button>
 				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					<input type="input" name="" id="searchInMenuIngredients">
-				    <div id="containerIngredients" class="bg-primary flex"></div>
+					<input type="input" name="" id="searchInDataButtonIngredient">
+				    <div id="containerIngredient" class="bg-primary flex"></div>
 				</div>
 			</div>
 			<div class="dropdown">
@@ -35,8 +35,8 @@
 	    			Appareil
 				</button>
 				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					<input type="input" name="" id="searchInMenuAppliances">
-				    <div id="containerAppliances" class="bg-danger flex"></div>
+					<input type="input" name="" id="searchInDataButtonAppliance">
+				    <div id="containerAppliance" class="bg-danger flex"></div>
 				</div>
 			</div>
 			<div class="dropdown">
@@ -44,8 +44,8 @@
 	   				Ustensils
 				</button>
 				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					<input type="input" name="" id="searchInMenuUstensils">
-				    <div id="containerUstensils" class="bg-success flex"></div>
+					<input type="input" name="" id="searchInDataButtonUstensil">
+				    <div id="containerUstensil" class="bg-success flex"></div>
 				</div>
 			</div>
 		</section>
@@ -58,9 +58,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 	<script src="./json/recipes.js"></script>
-	<script src="./js/Ingredients.js"></script>
-	<script src="./js/Appliances.js"></script>
-	<script src="./js/Ustensils.js"></script>
+	<script src="./js/Button.js"></script>
 	<script src="./js/Card.js"></script>
 	<script src="./js/Main.js"></script>
 	<script src="./js/Input.js"></script>
