--- a/index.html
+++ b/index.html
@@ -25,17 +25,25 @@
 				<button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	   				Ingrédients
 				</button>
-				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					<input type="input" name="" id="searchInDataButtonIngredient">
+				<div class="bg-primary dropdown-menu" aria-labelledby="dropdownMenuButton">
+					<input
+					class="bg-primary" 
+					type="input" 
+					placeholder="Rechercher un ingrédient..." 
+					id="searchInDataButtonIngredient">
 				    <div id="containerIngredient" class="bg-primary flex"></div>
 				</div>
 			</div>
 			<div class="dropdown">
 				<button class="btn btn-danger dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	    			Appareil
+	    			Appareils
 				</button>
-				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					<input type="input" name="" id="searchInDataButtonAppliance">
+				<div class="bg-danger dropdown-menu" aria-labelledby="dropdownMenuButton">
+					<input
+					class="bg-danger" 
+					type="input"
+					placeholder="Rechercher un appareil..." 
+					id="searchInDataButtonAppliance">
 				    <div id="containerAppliance" class="bg-danger flex"></div>
 				</div>
 			</div>
@@ -43,8 +51,12 @@
 				<button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	   				Ustensils
 				</button>
-				<div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					<input type="input" name="" id="searchInDataButtonUstensil">
+				<div class="bg-success dropdown-menu" aria-labelledby="dropdownMenuButton">
+					<input
+					class="bg-success" 
+					type="input"
+					placeholder="Rechercher un ustensil..."
+					id="searchInDataButtonUstensil">
 				    <div id="containerUstensil" class="bg-success flex"></div>
 				</div>
 			</div>
