Création des pages de recette individuelle

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		<section id="containerKeywords" class="flex"></section>
 		<section class="dropdowns flex">
 			<div class="dropdown">
-				<button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	   				Ingrédients
+				<button class="btn btn-primary dropdown-toggle flex" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	   				<p>Ingrédients</p>
 				</button>
 				<div class="bg-primary dropdown-menu" aria-labelledby="dropdownMenuButton">
 					<input
@@ -35,8 +35,8 @@
 				</div>
 			</div>
 			<div class="dropdown">
-				<button class="btn btn-danger dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	    			Appareils
+				<button class="btn btn-danger dropdown-toggle flex" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	    			<p>Appareils</p>
 				</button>
 				<div class="bg-danger dropdown-menu" aria-labelledby="dropdownMenuButton">
 					<input
@@ -48,8 +48,8 @@
 				</div>
 			</div>
 			<div class="dropdown">
-				<button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	   				Ustensils
+				<button class="btn btn-success dropdown-toggle flex" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+	   				<p>Ustensils</p>
 				</button>
 				<div class="bg-success dropdown-menu" aria-labelledby="dropdownMenuButton">
 					<input
