--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<section id="containerKeywords" class="flex"></section>
 		<section class="dropdowns flex">
 			<div class="dropdown">
-				<button class="btn btn-primary dropdown-toggle flex" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<button class="btn btn-primary dropdown-toggle flex" type="button" id="dropdownMenuButtonIngredients" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	   				<p>Ingrédients</p>
 				</button>
 				<div class="bg-primary dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -30,12 +30,12 @@
 					class="bg-primary" 
 					type="input" 
 					placeholder="Rechercher un ingrédient..." 
-					id="searchInDataButtonIngredient">
-				    <div id="containerIngredient" class="bg-primary flex"></div>
+					id="searchInDataButtonIngredients">
+				    <div id="containerIngredients" class="bg-primary flex"></div>
 				</div>
 			</div>
 			<div class="dropdown">
-				<button class="btn btn-danger dropdown-toggle flex" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<button class="btn btn-danger dropdown-toggle flex" type="button" id="dropdownMenuButtonAppliance" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	    			<p>Appareils</p>
 				</button>
 				<div class="bg-danger dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -48,7 +48,7 @@
 				</div>
 			</div>
 			<div class="dropdown">
-				<button class="btn btn-success dropdown-toggle flex" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<button class="btn btn-success dropdown-toggle flex" type="button" id="dropdownMenuButtonUstensils" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	   				<p>Ustensils</p>
 				</button>
 				<div class="bg-success dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -56,8 +56,8 @@
 					class="bg-success" 
 					type="input"
 					placeholder="Rechercher un ustensil..."
-					id="searchInDataButtonUstensil">
-				    <div id="containerUstensil" class="bg-success flex"></div>
+					id="searchInDataButtonUstensils">
+				    <div id="containerUstensils" class="bg-success flex"></div>
 				</div>
 			</div>
 		</section>
@@ -70,9 +70,9 @@
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 	<script src="./json/recipes.js"></script>
+	<script src="./js/Input.js"></script>
 	<script src="./js/Button.js"></script>
 	<script src="./js/Card.js"></script>
 	<script src="./js/Main.js"></script>
-	<script src="./js/Input.js"></script>
 </body>
 </html>
