--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 					type="input" 
 					placeholder="Rechercher un ingrédient..." 
 					id="searchInDataButtonIngredients">
+					<i class="fas fa-chevron-up"></i>
 				    <div id="containerIngredients" class="bg-primary flex"></div>
 				</div>
 			</div>
@@ -44,6 +45,7 @@
 					type="input"
 					placeholder="Rechercher un appareil..." 
 					id="searchInDataButtonAppliance">
+					<i class="fas fa-chevron-up"></i>
 				    <div id="containerAppliance" class="bg-danger flex"></div>
 				</div>
 			</div>
@@ -57,6 +59,7 @@
 					type="input"
 					placeholder="Rechercher un ustensil..."
 					id="searchInDataButtonUstensils">
+					<i class="fas fa-chevron-up"></i>
 				    <div id="containerUstensils" class="bg-success flex"></div>
 				</div>
 			</div>
