--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 	</header>
 	<main>
 		<section>
-			<form class="containerInput" method="post" action="" autocomplete="off">
+			<form class="containerInput" method="post" autocomplete="off">
 				<input id="input" class="form-control form-control-lg" type="text" placeholder="Rechercher un ingrédient, appareil, ustensile ou une recette">
-				<div type="submit" id="magnifyingGlass"><i class="fas fa-search"></i></div>
+				<div id="magnifyingGlass"><i class="fas fa-search"></i></div>
 			</form>
 		</section>
 		<section id="containerKeywords" class="flex"></section>
 		<section class="dropdowns flex">
 			<div class="dropdown">
 				<button class="btn btn-primary dropdown-toggle flex" type="button" id="dropdownMenuButtonIngredients" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	   				<p>Ingrédients</p>
+	   				Ingrédients
 				</button>
-				<div class="bg-primary dropdown-menu" aria-labelledby="dropdownMenuButton">
+				<div class="bg-primary dropdown-menu" aria-labelledby="dropdownMenuButtonIngredients">
 					<input
 					class="bg-primary" 
 					type="input" 
@@ -37,9 +37,9 @@
 			</div>
 			<div class="dropdown">
 				<button class="btn btn-danger dropdown-toggle flex" type="button" id="dropdownMenuButtonAppliance" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	    			<p>Appareils</p>
+	    			Appareils
 				</button>
-				<div class="bg-danger dropdown-menu" aria-labelledby="dropdownMenuButton">
+				<div class="bg-danger dropdown-menu" aria-labelledby="dropdownMenuButtonAppliance">
 					<input
 					class="bg-danger" 
 					type="input"
@@ -51,9 +51,9 @@
 			</div>
 			<div class="dropdown">
 				<button class="btn btn-success dropdown-toggle flex" type="button" id="dropdownMenuButtonUstensils" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-	   				<p>Ustensils</p>
+	   				Ustensils
 				</button>
-				<div class="bg-success dropdown-menu" aria-labelledby="dropdownMenuButton">
+				<div class="bg-success dropdown-menu" aria-labelledby="dropdownMenuButtonUstensils">
 					<input
 					class="bg-success" 
 					type="input"
