--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<div class="bg-primary dropdown-menu" aria-labelledby="dropdownMenuButtonIngredients">
 					<input
 					class="bg-primary" 
-					type="input" 
+					type="text" 
 					placeholder="Rechercher un ingrédient..." 
 					id="searchInDataButtonIngredients">
 					<i class="fas fa-chevron-up"></i>
@@ -42,7 +42,7 @@
 				<div class="bg-danger dropdown-menu" aria-labelledby="dropdownMenuButtonAppliance">
 					<input
 					class="bg-danger" 
-					type="input"
+					type="text"
 					placeholder="Rechercher un appareil..." 
 					id="searchInDataButtonAppliance">
 					<i class="fas fa-chevron-up"></i>
@@ -56,7 +56,7 @@
 				<div class="bg-success dropdown-menu" aria-labelledby="dropdownMenuButtonUstensils">
 					<input
 					class="bg-success" 
-					type="input"
+					type="text"
 					placeholder="Rechercher un ustensil..."
 					id="searchInDataButtonUstensils">
 					<i class="fas fa-chevron-up"></i>
