--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
 				<div id="magnifyingGlass"><i class="fas fa-search"></i></div>
 			</form>
 		</section>
-		<section id="containerKeywords" class="flex"></section>
+		<section id="containerKeywords" class="flex"><h2></h2></section>
 		<section class="dropdowns flex">
+			<h2></h2>
 			<div class="dropdown">
 				<button class="btn btn-primary dropdown-toggle flex" type="button" id="dropdownMenuButtonIngredients" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	   				Ingrédients
@@ -64,7 +65,7 @@
 				</div>
 			</div>
 		</section>
-		<section id="containerCards" class="flex"></section>
+		<section id="containerCards" class="flex"><h2></h2></section>
 	</main>
 	<footer>
 		
